--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"WDM | Main","short_name":"WDM | Main","start_url":"/","display":"standalone","theme_color":"#ab9776","background_color":"#ab9776","icons":[{"src":"assets/icons/512x512.png","sizes":"512x512","type":"image/png"}]}
+{"name":"Wave Digital Ministries","short_name":"Wave Digital Ministries","start_url":"/","display":"standalone","theme_color":"#ab9776","background_color":"#ab9776","icons":[{"src":"assets/icons/512x512.png","sizes":"512x512","type":"image/png"}]}
